# cv-duplicate-detection-mdpi

./: .gitignore  README.md  main.py  pyproject.toml
src/mdpi_assesment/: cli.py
src/mdpi_assesment/task2/: duplicate_detector.py
src/mdpi_assesment/task2/strategies/: embedding_nn.py
src/mdpi_assessment/: cli.py  config.py  logger.py
src/mdpi_assessment/task1/: process_image.py
src/mdpi_assessment/task2/: duplicate_detector.py  workflow.py
src/mdpi_assessment/task2/aggregation/: candidate_collector.py
src/mdpi_assessment/task2/investigation/: core.py  ela_investigation.py  metrics.py  pipeline.py  scoring.py  viz.py
src/mdpi_assessment/task2/strategies/: embedding_nn.py  embedding_nn_faiss.py  equal.py  local_features.py  phash.py
src/mdpi_assessment/task2/verification/: forensic_ela.py  run_forensics.py
