[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-duplicate-detection-mdpi"
version = "0.1.0"
description = "MDPI Computer Vision Assessment"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy>=2.2.6",
    "opencv-python-headless>=4.12.0.88",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "click>=8.1.7"
]

[project.scripts]
mdpi_assesment = "mdpi_assesment.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
